# obs-remote-terminal

./: CMakeLists.txt  README.md  client.cpp  client.h  command.cpp  command.h  commandhandler.cpp  commandhandler.h  commandserver.cpp  commandserver.h  obscommandhandler.cpp  obscommandhandler.h  remote-control.cpp  remotecontroldialog.cpp  remotecontroldialog.h  remotecontroldialog.ui  rt-config.cpp  rt-config.h  rt-config.ui  rt-plugin.cpp
